--- a/custom_components/enelGrid/manifest.json
+++ b/custom_components/enelGrid/manifest.json
@@ -1,13 +1,13 @@
 {
-  "domain": "enelGrid",
+  "domain": "enelgrid",
   "name": "Enel Grid Integration",
   "version": "1.0.0",
-  "documentation": "https://github.com/sathia-musso/enelGrid",
-  "requirements": ["aiohttp", "beautifulsoup4"],
+  "documentation": "https://github.com/sathia-musso/enelgrid",
+  "requirements": ["beautifulsoup4"],
   "dependencies": [],
   "codeowners": ["@sathia-musso"],
   "config_flow": true,
   "iot_class": "cloud_polling",
-  "loggers": ["custom_components.enelGrid"],
-  "issue_tracker": "https://github.com/sathia-musso/enelGrid/issues"
+  "loggers": ["custom_components.enelgrid"],
+  "issue_tracker": "https://github.com/sathia-musso/enelgrid/issues"
 }
