--- a/custom_components/enelgrid/manifest.json
+++ b/custom_components/enelgrid/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "documentation": "https://github.com/sathia-musso/enelgrid",
   "requirements": ["beautifulsoup4"],
-  "dependencies": [],
+  "dependencies": ["recorder"],
   "codeowners": ["@sathia-musso"],
   "config_flow": true,
   "iot_class": "cloud_polling",
