--- a/custom_components/enelgrid/manifest.json
+++ b/custom_components/enelgrid/manifest.json
@@ -5,6 +5,7 @@
   "config_flow": true,
   "dependencies": ["recorder"],
   "documentation": "https://github.com/sathia-musso/enelgrid",
+  "integration_type": "service",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/sathia-musso/enelgrid/issues",
   "loggers": ["custom_components.enelgrid"],
