--- a/custom_components/enelgrid/manifest.json
+++ b/custom_components/enelgrid/manifest.json
@@ -9,6 +9,6 @@
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/sathia-musso/enelgrid/issues",
   "loggers": ["custom_components.enelgrid"],
-  "requirements": ["beautifulsoup4"],
+  "requirements": ["beautifulsoup4==4.13.3"],
   "version": "1.0.0"
 }
